--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ishtiaque",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
@@ -26,6 +27,7 @@
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "node-geocoder": "^4.4.1",
     "nodemailer": "^6.10.1",
     "socket.io": "^4.8.1",
     "stream": "^0.0.3",
