--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-cron": "^3.0.3",
     "node-geocoder": "^4.4.1",
     "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.1",
     "socket.io": "^4.8.1",
     "stream": "^0.0.3",
     "stripe": "^17.4.0",
