--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-rate-limit": "^7.5.0",
     "http-status": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +30,7 @@
     "node-cron": "^3.0.3",
     "node-geocoder": "^4.4.1",
     "nodemailer": "^6.10.1",
+    "pdf-creator-node": "^2.3.5",
     "pdfkit": "^0.17.1",
     "socket.io": "^4.8.1",
     "stream": "^0.0.3",
