--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,6 @@ SMTP_SERVICE=gmail
 
 EMAIL_FROM_NAME="Sparktech"
 EMAIL_FROM_ADDRESS=arifishtiaque.sparktech@gmail.com
+
+
+SHOW_SUBSCRIPTION=true
