image upload on s3 bucket

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,8 @@ EMAIL_FROM_ADDRESS=arifishtiaque.sparktech@gmail.com
 
 
 SHOW_SUBSCRIPTION=true
+
+# AWS_ACCESS_KEY_ID=AKIAUFXPLRERX6XW23QQ
+# AWS_SECRET_ACCESS_KEY=Axas0SoYncFTw5MZ/0fDPIZjHVtUaobymcx10Fcn
+# AWS_REGION=eu-west-3
+# AWS_BUCKET_NAME=many-stack
