--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Ishtiaque",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.10.0",
+    "@aws-sdk/client-s3": "^3.592.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
@@ -27,6 +28,7 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
     "node-geocoder": "^4.4.1",
     "nodemailer": "^6.10.1",
